# Algorithms-Library

./: CMakeLists.txt  LICENSE  README.md  graphalg.cpp  main  main.cpp  sortalg.c  sortalg.h  visual.cpp  visual.hpp
include/: graphalgo.hpp
src/: CMakeLists.txt
src/graph algo/: CMakeLists.txt  documentation  graphalgo.cpp  graphalgo.hpp  main  main.cpp
src/search algo/: CMakeLists.txt  documentation  main  searchalgo.c  searchalgo.h
src/sorting algo/: CMakeLists.txt  documentation  sortalgo.c  sortalgo.h
src/string algo/: CMakeLists.txt  documentation  stralgo.c  stralgo.h
